Move ImportGlobalPersistentHistograms() outside lock.

This function can create histograms which requires
grabbing the lock, so should not be called under lock.

In particular, previously we would call that function
from begin(), but since that's being done under lock,
this CL moves the call out of begin() and to the callers
of begin() prior to locking.

Hoping to land this before tomorrow's canary as it was made
more likely by https://chromium-review.googlesource.com/586913
which I landed earlier today.

BUG=749390

Change-Id: I8f038180f6f54ff21f6b0e33a76747e914987843
Reviewed-on: https://chromium-review.googlesource.com/588271
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Alexei Svitkine (OOO July28-Aug6) <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489909}
Former-commit-id: 4e5bc10e2ea3c128fee236775da53fdf19ebc0e9